Adds code to JavaBigDecimalFromByteArray for better handling long input sequences.